--- a/Blogger/index.html
+++ b/Blogger/index.html
@@ -36,7 +36,7 @@
     <div id="content">
         <div id="Front1">
             <img src="Files/MobileCal.png" draggable="false" id="MobileImages" alt="">
-            <p id="AboutMobileImg">Hello I made a calculator design with HTML, CSS. But its not working because I did not programmed it yet. You can try it by pressing Numbers on it. Go Now -> <a id="fontLink" href="#">Calculator |</a></p>
+            <p id="AboutMobileImg">Hello, I made a calculator design with HTML, CSS. But it's not working because I did not program it yet. You can try it by pressing Numbers on it. Go Now -> <a id="fontLink" href="#">Calculator |</a></p>
         </div>
         <div id="Front2"></div>
     </div>
