--- a/Blogger/index.html
+++ b/Blogger/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head> 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -38,7 +38,10 @@
             <img src="Files/MobileCal.png" draggable="false" id="MobileImages" alt="">
             <p id="AboutMobileImg">Hello, I made a calculator design with HTML, CSS. But it's not working because I did not program it yet. You can try it by pressing Numbers on it. Go Now -> <a id="fontLink" href="#">Calculator |</a></p>
         </div>
-        <div id="Front2"></div>
+        <div id="Front2">
+            
+            <p id="AboutMobileImg">I made a Water Drops with HTML, CSS Only. It's simple to create Go Now -> <a id="fontLink" href="#">Water Drops |</a></p><img src="Files/MobileCal.png" draggable="false" id="MobileImages" alt="">
+        </div>
     </div>
 </body>
 <script src="Script/script.js"></script>
