--- a/Blogger/index.html
+++ b/Blogger/index.html
@@ -34,13 +34,19 @@
     </nav>
 
     <div id="content">
+        <div id="WelcomePage">
+            <img src="Files/goglesearch.png" alt="" id="WelcomeProfile">
+            <h1 id="WelcomeName">Welcome To Google</h1>
+            <p id="BioTxt">Hello, I am a Web Designer. You can check out my projects to find my experience level. My YouTube channel name is Royal Designer. On the YouTube channel, I upload videos of my new Small Projects and Website Templates for preview. You can buy the source code which website templates and small projects you want. </p>
+        </div>
         <div id="Front1">
             <img src="Files/MobileCal.png" draggable="false" id="MobileImages" alt="">
             <p id="AboutMobileImg">Hello, I made a calculator design with HTML, CSS. But it's not working because I did not program it yet. You can try it by pressing Numbers on it. Go Now -> <a id="fontLink" href="#">Calculator |</a></p>
         </div>
         <div id="Front2">
             
-            <p id="AboutMobileImg">I made a Water Drops with HTML, CSS Only. It's simple to create Go Now -> <a id="fontLink" href="#">Water Drops |</a></p><img src="Files/MobileCal.png" draggable="false" id="MobileImages" alt="">
+            <p id="AboutMobileImg">I made a Water Drops with HTML, CSS Only. It's simple to create Go Now -> <a id="fontLink" href="#">Water Drops |</a></p>
+            <img src="Files/MobileCal.png" draggable="false" id="MobileImages" alt="">
         </div>
     </div>
 </body>
