--- a/Blogger/index.html
+++ b/Blogger/index.html
@@ -36,8 +36,8 @@
     <div id="content">
         <div id="WelcomePage">
             <img src="Files/goglesearch.png" alt="" id="WelcomeProfile">
-            <h1 id="WelcomeName">Welcome To Google</h1>
-            <p id="BioTxt">Hello, I am a Web Designer. You can check out my projects to find my experience level. My YouTube channel name is Royal Designer. On the YouTube channel, I upload videos of my new Small Projects and Website Templates for preview. You can buy the source code which website templates and small projects you want. </p>
+            <h1 id="WelcomeName">Google</h1>
+            <p id="BioTxt">Hello, I am a Web Designer. You can check out my projects to find my experience level. My YouTube channel name is Royal Designer. On the YouTube channel, I upload videos of my new Small Projects and Website Templates. You can buy the source code which website templates and small projects you want. Visit my Fiverr Account and check gigs to buy. I have also an Instagram account.</p>
         </div>
         <div id="Front1">
             <img src="Files/MobileCal.png" draggable="false" id="MobileImages" alt="">
@@ -47,6 +47,10 @@
             
             <p id="AboutMobileImg">I made a Water Drops with HTML, CSS Only. It's simple to create Go Now -> <a id="fontLink" href="#">Water Drops |</a></p>
             <img src="Files/MobileCal.png" draggable="false" id="MobileImages" alt="">
+        </div>
+        <div id="Front3">
+            <img src="Files/BGMI Web.PNG" alt="" id="WebImage1">
+            <div id="AboutWeb1">This is a website Template. I made it with HTML, CSS, JavaScript. For Source code you have to buy it. <a id="fontLink" href="#">Buy it Now !</a></div>
         </div>
     </div>
 </body>
