--- a/Blogger/index.html
+++ b/Blogger/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head> 
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,10 +21,10 @@
         <div id="Dot3" class="Dots"></div>
     </div>
     <div id="QuickLinkWin">
-        <div class="QuickLinksItems" id="Quick1">Home</div>
-        <div class="QuickLinksItems" id="Quick2">Videos</div>
-        <div class="QuickLinksItems" id="Quick3">Websites</div>
-        <div class="QuickLinksItems" id="Quick4">More</div>
+        <a href="#" class="QuickLinksItems" id="Quick1">Fiverr</a>
+        <a href="#" class="QuickLinksItems" id="Quick2">YT Videos</a>
+        <a href="#" class="QuickLinksItems" id="Quick3">Instagram</a>
+        <a href="#" class="QuickLinksItems" id="Quick4">Gigs</a>
     </div>
     <nav>
         <div id="slideNav">
@@ -37,22 +37,44 @@
         <div id="WelcomePage">
             <img src="Files/goglesearch.png" alt="" id="WelcomeProfile">
             <h1 id="WelcomeName">Google</h1>
-            <p id="BioTxt">Hello, I am a Web Designer. You can check out my projects to find my experience level. My YouTube channel name is Royal Designer. On the YouTube channel, I upload videos of my new Small Projects and Website Templates. You can buy the source code which website templates and small projects you want. Visit my Fiverr Account and check gigs to buy. I have also an Instagram account.</p>
+            <p id="BioTxt">Hello, I am a Web Designer. You can check out my projects to find my experience level. My
+                YouTube channel name is Royal Designer. On the YouTube channel, I upload videos of my new Small Projects
+                and Website Templates. You can buy the source code which website templates and small projects you want.
+                Visit my Fiverr Account and check gigs to buy. I have also an Instagram account.</p>
         </div>
         <div id="Front1">
             <img src="Files/MobileCal.png" draggable="false" id="MobileImages" alt="">
-            <p id="AboutMobileImg">Hello, I made a calculator design with HTML, CSS. But it's not working because I did not program it yet. You can try it by pressing Numbers on it. Go Now -> <a id="fontLink" href="#">Calculator |</a></p>
+            <p id="AboutMobileImg">Hello, I made a calculator design with HTML, CSS. But it's not working because I did
+                not program it yet. You can try it by pressing Numbers on it. Go Now -> <a target="_Blank" id="fontLink"
+                    href="#">Calculator |</a></p>
         </div>
         <div id="Front2">
-            
-            <p id="AboutMobileImg">I made a Water Drops with HTML, CSS Only. It's simple to create Go Now -> <a id="fontLink" href="#">Water Drops |</a></p>
+
+            <p id="AboutMobileImg">I made a Water Drops with HTML, CSS Only. It's simple to create Go Now -> <a
+                    target="_Blank" id="fontLink" href="#">Water Drops |</a></p>
             <img src="Files/MobileCal.png" draggable="false" id="MobileImages" alt="">
         </div>
         <div id="Front3">
             <img src="Files/BGMI Web.PNG" alt="" id="WebImage1">
-            <div id="AboutWeb1">This is a website Template. I made it with HTML, CSS, JavaScript. For Source code you have to buy it. <a id="fontLink" href="#">Buy it Now !</a></div>
+            <div id="AboutWeb1">This is a website Template. I made it with HTML, CSS, JavaScript. For Source code you
+                have to buy it. <a target="_Blank" id="fontLink" href="#">Buy it Now !</a></div>
         </div>
+        <div id="Front4">
+            <p id="YouTubeRedirector">Visit My YouTube Channel For More Website Template And Small Projects. <a href="#"
+                    target="_Blank" id="GoYT">&lt;Go Now&gt;</a> </p>
+        </div>
+
     </div>
+    <footer>
+        <div id="SocialPlate">
+            <a href="#" class="Socials" id="Social1">CodeWithFun |</a>
+            <a href="#" class="Socials" id="Social2">Instagram |</a>
+            <a href="#" class="Socials" id="Social3">YouTube |</a>
+            <a href="#" class="Socials" id="Social4">Fiverr |</a>
+            <a href="#" class="Socials" id="Social5">Gigs</a>
+        </div>
+        <p id="CopyRight">Copyright © 2021. All Rights Reserved.</p>
+    </footer>
 </body>
 <script src="Script/script.js"></script>
 
