--- a/Fynipo/index.html
+++ b/Fynipo/index.html
@@ -6,16 +6,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Style/style.css">
-    <title>Fynipo</title>
+    <title>Google</title>
 </head>
 
 <body>
     <nav>
-        <h1 id="WebName">Fynipo</h1>
+        <h1 id="WebName">Google</h1>
+        <div id="searchSec">
+
+            <div id="SearchSggt">
+                <p id="Catee">Categories</p>
+                <ul>
+                    <li>Apps</li>
+                    <li>Softwares</li>
+                    <li>Firmware</li>
+                    <li>Blogs</li>
+                </ul>
+            </div>
+        </div>
+        <div id="LogSec">
+            <a id="Login" href="#">Login</a>
+            <a href="#" id="SignUp">Sign Up</a>
+        </div>
     </nav>
     <div id="SideBar">
         <div id="SideItmsCon">
-            <h1 id="WebNameInSide">Fynipo</h1>
+            <h1 id="WebNameInSide">Google</h1>
             <div id="ScrollItems" class="userselectnone">
                 <div id="InSideItems1" class="InSideItems cursorPinted"> <img src="Files/home_icon.png"
                         class=" userselectnone InsideIcons invert" alt=""> Home</div>
@@ -80,6 +96,9 @@
                 <div id="Help" class="FiveHomeIcons"></div>
             </div>
         </div>
+
+    </div>
+    <div id="WriteHereContent">
 
     </div>
 </body>
