--- a/Fynipo/index.html
+++ b/Fynipo/index.html
@@ -10,72 +10,74 @@
 </head>
 
 <body>
-    <nav>
-        <h1 id="WebName">Google</h1>
-        <div id="searchSec">
-
-            <div id="SearchSggt">
-                <p id="Catee">Categories</p>
-                <ul>
-                    <li>Apps</li>
-                    <li>Softwares</li>
-                    <li>Firmware</li>
-                    <li>Blogs</li>
-                </ul>
-            </div>
-        </div>
+    <nav id="navi">
+        <h1 id="WebName"></h1>
+        <div id="SearchSubBTN2"></div>
         <div id="LogSec">
-            <a id="Login" href="#">Login</a>
-            <a href="#" id="SignUp">Sign Up</a>
+            <a id="Login" href="#"></a>
+            <a href="#" id="SignUp"></a>
         </div>
     </nav>
     <div id="SideBar">
         <div id="SideItmsCon">
             <h1 id="WebNameInSide">Google</h1>
             <div id="ScrollItems" class="userselectnone">
-                <div id="InSideItems1" class="InSideItems cursorPinted"> <img src="Files/home_icon.png"
-                        class=" userselectnone InsideIcons invert" alt=""> Home</div>
-                <div id="InSideItems2" class="InSideItems cursorPinted"><img src="Files/Youtubeb&w.png"
-                        class=" userselectnone InsideIcons invert" alt=""> YouTube</div>
+                <div id="InSideItems1" class="InSideItems cursorPinted">
+                    <img id="SideIconsimg1" src="" class=" userselectnone InsideIcons invert" alt="">
+                </div>
+                <div id="InSideItems2" class="InSideItems cursorPinted">
+                    <img id="SideIconsimg2" src="" class=" userselectnone InsideIcons invert" alt="">
+                </div>
                 <div id="InstgramServ">
-                    <div id="InstagramServices" class="InSideItems cursorPinted"><img src="Files/B&WInsta.png"
-                            class=" userselectnone InsideIcons invert" alt="">Instagram</div>
+                    <div id="InstagramServices" class="InSideItems cursorPinted">
+                        <img id="SideIconsimg3" src="" class=" userselectnone InsideIcons invert" alt="">
+                    </div>
                     <div id="InSideItems3"
-                        class=" userselectnone FontForInChild InSideItems cursorPinted MarginLeft1rem"><img
-                            src="Files/Followers.png" class=" userselectnone innericons invert" alt="">Buy Followers
+                        class=" userselectnone FontForInChild InSideItems cursorPinted MarginLeft1rem">
+                        <img id="SideIconsimg4" src="" class=" userselectnone innericons invert" alt="">
                     </div>
                     <div id="InSideItems4"
-                        class=" userselectnone FontForInChild InSideItems cursorPinted MarginLeft1rem"><img
-                            src="Files/Likes.png" class=" userselectnone innericons invert" alt="">Buy Likes</div>
+                        class=" userselectnone FontForInChild InSideItems cursorPinted MarginLeft1rem">
+                        <img id="SideIconsimg5" src="" class=" userselectnone innericons invert" alt="">
+                    </div>
                 </div>
                 <div id="DownloadsShower">
-                    <div id="DownloadsShoItems" class="InSideItems cursorPinted"><img src="Files/downloads.png"
-                            class=" userselectnone InsideIcons invert" alt=""> Downloads</div>
-                    <div id="InSideItems11"
-                        class=" userselectnone FontForInChild InSideItems MarginLeft1rem cursorPinted"><img
-                            src="Files/windows.png" class=" userselectnone innericons invert" alt="">PC Softwares</div>
-                    <div id="InSideItems12"
-                        class=" userselectnone FontForInChild InSideItems MarginLeft1rem cursorPinted"><img
-                            src="Files/android.png" class=" userselectnone innericons invert" alt="">Android Apps</div>
-                    <div id="InSideItems13"
-                        class=" userselectnone FontForInChild InSideItems MarginLeft1rem cursorPinted"><img
-                            src="Files/ROMs.png" class=" userselectnone innericons invert" alt="">Android ROMs</div>
-
+                    <div id="DownloadsShoItems" class="InSideItems cursorPinted">
+                        <img id="SideIconsimg6" src="" class=" userselectnone InsideIcons invert" alt="">
+                    </div>
+                    <div id="InSideItems5"
+                        class=" userselectnone FontForInChild InSideItems MarginLeft1rem cursorPinted">
+                        <img id="SideIconsimg7" src="" class=" userselectnone innericons invert" alt="">
+                    </div>
+                    <div id="InSideItems6"
+                        class=" userselectnone FontForInChild InSideItems MarginLeft1rem cursorPinted">
+                        <img id="SideIconsimg8" src="" class=" userselectnone innericons invert" alt="">
+                    </div>
+                    <div id="InSideItems7"
+                        class=" userselectnone FontForInChild InSideItems MarginLeft1rem cursorPinted">
+                        <img id="SideIconsimg9" src="" class=" userselectnone innericons invert" alt="">
+                    </div>
                 </div>
-                <div id="InSideItems9" class=" userselectnone InSideItems cursorPinted"> <img src="Files/blogs.png"
-                        class=" userselectnone InsideIcons invert" alt=""> Blogs</div>
-                <div id="InSideItems10" class=" userselectnone InSideItems cursorPinted"><img src="Files/buy.png"
-                        class=" userselectnone InsideIcons invert" alt=""> Buy Products</div>
-                <div id="InSideItems7" class=" userselectnone InSideItems cursorPinted"><img src="Files/fiverr.png"
+                <div id="InSideItems8" class=" userselectnone InSideItems cursorPinted">
+                    <img id="SideIconsimg10" src="" class=" userselectnone InsideIcons invert" alt="">
+                </div>
+                <div id="InSideItems9" class=" userselectnone InSideItems cursorPinted">
+                    <img id="SideIconsimg11" src="" class=" userselectnone InsideIcons invert" alt="">
+                </div>
+                <div id="InSideItems10" class=" userselectnone InSideItems cursorPinted">
+                    <img id="SideIconsimg12" src=""
                         style="width: 2.2rem; height: auto; margin-left: 0.8rem ; margin-right: 0.8rem;"
-                        class=" userselectnone InsideIcons invert" alt=""> Fiverr Gigs Info</div>
-                <div id="InSideItems5" class=" userselectnone InSideItems cursorPinted"><img
-                        src="Files/privacyPolicy.png" class=" userselectnone InsideIcons invert" alt="">Privacy Policy
+                        class=" userselectnone InsideIcons invert" alt="">
                 </div>
-                <div id="InSideItems6" class=" userselectnone InSideItems cursorPinted"> <img src="Files/contactus.png"
-                        class=" userselectnone InsideIcons invert" alt="">Contact Us</div>
-                <div id="InSideItems8" class=" userselectnone InSideItems cursorPinted"><img src="Files/files.png"
-                        class=" userselectnone InsideIcons invert" alt="">Request A File</div>
+                <div id="InSideItems11" class=" userselectnone InSideItems cursorPinted">
+                    <img id="SideIconsimg13" src="" class=" userselectnone InsideIcons invert" alt="">
+                </div>
+                <div id="InSideItems12" class=" userselectnone InSideItems cursorPinted">
+                    <img id="SideIconsimg14" src="" class=" userselectnone InsideIcons invert" alt="">
+                </div>
+                <div id="InSideItems13" class=" userselectnone InSideItems cursorPinted">
+                    <img id="SideIconsimg15" src="" class=" userselectnone InsideIcons invert" alt="">
+                </div>
             </div>
         </div>
         <div id="RightSideBTNAnItems">
@@ -84,15 +86,8 @@
                 <div id="LInBTN2" class="LInBTNs"></div>
             </div>
             <div id="SideBot">
-                <div id="FiveHomeIcon1" class="FiveHomeIcons"> <svg class="HomeSVG" viewBox="0 0 1024 1024" role="img">
-                        <path
-                            d="M 470 48 A 1 1 0 0 0 466 921 A 1 1 0 0 0 475 48 M 473 140 L 780 468 H 655 V 733 H 528 V 533 H 418 V 739 H 289 V 463 H 172 L 473 139">
-                        </path>
-                    </svg> </div>
-                <div id="FiveHomeIcon2" class="FiveHomeIcons"></div>
-                <div id="FiveHomeIcon3" class="FiveHomeIcons"></div>
-                <div id="FiveHomeIcon4" class="FiveHomeIcons"></div>
-                <div id="FiveHomeIcon5" class="FiveHomeIcons"></div>
+                <div id="FiveHomeIcon1" class="FiveHomeIcons"> </div>
+                <div id="FiveHomeIcon2" class="FiveHomeIcons"> </div>
                 <div id="Help" class="FiveHomeIcons"></div>
             </div>
         </div>
@@ -102,6 +97,7 @@
 
     </div>
 </body>
+<script src="Script/InputData.js"></script>
 <script src="Script/script.js"></script>
 
 </html>
