--- a/blogcard/index.html
+++ b/blogcard/index.html
@@ -32,7 +32,8 @@
 
     }
 
-    /* #sec::before {
+    /* 
+    #sec::before {
         position: absolute;
         width: 20rem;
         height: 20rem;
@@ -56,7 +57,7 @@
 
     #CardWin {
         background-color: rgba(255, 255, 255, 0.226);
-        box-shadow: 10px 20px 50px rgba(0, 0, 0, 0.178);
+        box-shadow: 10px 20px 50px rgba(0, 0, 0, 0.397);
         width: 40rem;
         height: auto;
         display: flex;
@@ -131,15 +132,29 @@
         font-weight: 600;
         margin-left: auto;
     }
+
+    @media screen and (max-width: 708px) {
+        #CardWin {
+            margin: auto;
+            width: 90%;
+        }
+
+        #BlogTitle {
+            font-size: 1rem;
+        }
+
+        #BlogDes {
+            font-size: 0.8rem;
+        }
+    }
 </style>
 
 <body>
     <div id="sec">
         <div id="CardWin">
-            <p id="BlogTitle">How to fix unfortunatly android has stopped?</p>
+            <p id="BlogTitle">Lorem ipsum sit amet consectetur adip.</p>
             <div id="BlogDes">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur modi quis omnis
-                reprehenderit accusantium, ex error architecto placeat neque, assumenda animi debitis vitae molestias
-                quas, accusamus nulla temporibus. Deleniti, aut.</div>
+                reprehenderit accusantium, ex error architecto</div>
             <div id="CardBTNSSec">
                 <div id="ReadMore">Read More</div>
                 <div id="AbtBlog">CodeWithFun</div>
