--- a/EnterPIN/index.html
+++ b/EnterPIN/index.html
@@ -295,7 +295,7 @@
             DisplayMainContner.style.display = "none";
             NumContainer.style.display = "none";
             Status.style.display = "flex";
-            Message.textContent = "Wrong Password"
+            Message.textContent = "Wrong PIN"
             for (let i = 0; i < CirclesIDs.length; i++) {
                 CirclesIDs[i].style.backgroundColor = "Transparent";
                 aFamily[i] = '';
